Fix social icons wrap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -145,8 +145,8 @@ td.code {
  * Wrapper
  */
 .wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width: -webkit-calc($usable-width);
+  max-width:              $usable-width;
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
